modified img path

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="utf-8" />
         <title>Boolean Academy</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Fonts -->
         <link
             href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap"
             rel="stylesheet"
         />
         <!-- Main Styles -->
-        <link rel="stylesheet" href="./css/style.css" />
+        <link rel="stylesheet" href="style.css" />
     </head>
     <body>
         <!--
@@ -33,7 +34,7 @@
                         <div class="col">
                             <div class="card">
                                 <img
-                                    src="./img/home.svg"
+                                    src="home.svg"
                                     alt="Lezioni a casa tua"
                                 />
                                 <h3 class="title">A casa tua</h3>
@@ -45,7 +46,7 @@
                         <div class="col">
                             <div class="card">
                                 <img
-                                    src="./img/online.svg"
+                                    src="online.svg"
                                     alt="Lezioni online"
                                 />
                                 <h3 class="title">Online</h3>
@@ -68,7 +69,7 @@
                         <div class="col">
                             <div class="card">
                                 <img
-                                    src="./img/search.svg"
+                                    src="search.svg"
                                     alt="Guarda i profili"
                                 />
                                 <h3 class="title">Cerca</h3>
@@ -80,7 +81,7 @@
                         <div class="col">
                             <div class="card">
                                 <img
-                                    src="./img/contact.svg"
+                                    src="contact.svg"
                                     alt="Contatta senza impegno"
                                 />
                                 <h3 class="title">Contatta</h3>
@@ -92,7 +93,7 @@
                         <div class="col">
                             <div class="card">
                                 <img
-                                    src="./img/code.svg"
+                                    src="code.svg"
                                     alt="Ibizia subito a scrivere codice"
                                 />
                                 <h3 class="title">Programma</h3>
@@ -114,7 +115,7 @@
                     <div class="row">
                         <div class="col col-left">
                             <img
-                                src="./img/why.svg"
+                                src="why.svg"
                                 alt="Perchè scegliere Boolean Academy"
                             />
                         </div>
